--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <!-- We only include this to explicitly loosen the CSP of various packager environments. It does not provide any security. -->
   <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: blob:">
-  <title>Project</title>
+  <title>temp</title>
   <style>
     body {
       color: #ffffff;
@@ -249,7 +249,7 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
       scaffolding.setAccentColor("#ff4c4c");
 
       try {
-        scaffolding.addCloudProvider(new Scaffolding.Cloud.WebSocketProvider(["wss://clouddata.turbowarp.org","wss://clouddata.turbowarp.xyz"], "p4-@Project.sb3"));
+        scaffolding.addCloudProvider(new Scaffolding.Cloud.WebSocketProvider(["wss://clouddata.turbowarp.org","wss://clouddata.turbowarp.xyz"], "p4-@temp.sb3"));
       } catch (error) {
         console.error(error);
       }
@@ -305,19 +305,19 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
           ), true);
         }
       };
-      let projectDecodeBuffer = new ArrayBuffer(2832);
+      let projectDecodeBuffer = new ArrayBuffer(2872);
       let projectDecodeIndex = 0;
       const decodeChunk = (size) => {
         try {
           base85decode(document.currentScript.getAttribute("data"), projectDecodeBuffer, projectDecodeIndex);
           document.currentScript.remove();
           projectDecodeIndex += size;
-          setProgress(interpolate(0.1, 0.75, projectDecodeIndex / 2832));
+          setProgress(interpolate(0.1, 0.75, projectDecodeIndex / 2872));
         } catch (e) {
           handleError(e);
         }
       };
-      </script><script data="wC_B+4****2****5,oR?r7d8+@t?w,6rA+*b*DlNwLKzIUF*2OX\jVEl7`_;m`]}+iFzf:j:S7yHuyl[8(.@1HS:i-foj(7Nv2@-,f)tjHesE7YX(FptUSJSYywRtyFyhnqR*vJQ?m\QcY(*l6FjV[+z}\-.(`:;EX9wc50kr5pzA2T-W`|dG,x4\h*REd-k6uPaXhsqklVS{EOhZP:56I\^[^nNpc)n-mbdR9{iijl))\WLDuO.Zjgc;B)ZaO?iLCaNo`;[M(lO806T~PVbAM`0F_u9J;(M3`=[`IF}]oK7H*D+qnJ~D0\W=wm\hU]l-opJA-t`uHd:vLjNbF?Got7L?EYr3z`R|zP_,U3ryy\;-|xg7Q^oL4V`-H.=uc2gMW}r,NM./njki\nomtK6Dn7mvgO4V70_88ME^~sio-]e6(Ro0JY,G.*sCRuj9V@dZu}t=hOykkNlxN,9F\2tx`uCGhNnJw4L+VDJ/LZ955TGiXdi=VTCvqxV(/Q3sjpBWs8g^i-vke:yEla)jFlcKpY\)lWLryz,*t0Mr:K@@60wF(tehDwfyBjH4X1Df}@0twq-+`zh=D`5zgCmPPGfL{V`j99D,DXJSY*xPS=AJ4r3pIRwSwjy|MHnog?]cMH6tRbG`-C6+,9:NJ3Cr9)1HSF-7JUi8?4W|YB+5MiUb9k4)\ojAC5VWgy3Q[da)zmbI9{3/6lw.n8E-lX(+UYxlAWK*:THuHJ./N1jxsI)GDM[6LftHMUQyUMTOqn\xUjzwX,Ceix,)EVrOCsN`Ez\Uw5^KufMmBs9kouKI7G;B7a`K-SNl}.3C4hd*T~bwW5d]8+D]@w/HTv/X~Ks`D};O3R7dNpz?FYTk0;KhOCYwDO//::rYuS*uWPi~c75iX4]lSenogPk^-0(2[KFc\\ByO.@Bj`^FqaF{K]f=Osa=S5+y+/IHUv?Lk`Oitx3L,I_8k(QHp;H7(pqLnhOfzy);uqY4*s2zu+e8Qf}_@ZV)OEByQ9rkNQHEu0GoS@DBClx[_FFvE9qVJ)@1lj=W6M-g[H+]lX@j,+HH7w?sL{q(kfgbE7cthzQGhTxtL\^G8|==u3aiFfU\swdNm(+q.7YSz_419ku8ZAtGPwAG;b`~2.k9wR/RY.px7:Qg^EgYp}wj5nDnB0X]V\X4GyePBe1i|bS}?4UQI=X3Nd,NaQFy.O0yqahsvl~_+]acf,Lgo?{TQ`*wC_B+4****2****tM)JlyNd9*JBY?*NXq-*G]P@JIdCo9}Y/2;YYm@J6sO::Hdgk:3HIzIa\Z4(au^+OmW=uB|7:P4v4=UV0mE*irjJD^QWBI0Wuv7E-}a/mz+r`ZSD/)[8BA\**wlCxdTA66umycF|Zl:;|GZ-nU;C]w))pibg\*GkX5+qTl4GYTWng[OS?|0^4PAoLNP_nj^mG7|y|j]LKeUi-~5c{1`x8?+o|]fM3HyGCo6Bp@MsCy=l(D,SL(SS10Y]wRsP~.+8H***2B***`_TAv^OF(;d_*HVYoRZ5c-9E(.jwR;T3.6:^s7ZI:0Pn;S9*i;*L8q:0[nR;K:,r8~o;haQkbVp)ee/1RBi)1C.;-=f?3\M(\,vdw8Fp]Rt3E8N|w~({=/w=]Y8.-Ptx4L{7q;\Dh+9KaN/]Ciajbw=zh2y)Uk;d8TQaMFquv;cJF-Qo|)OwtOD\3ig1/h{^R{{:){^N(Y*7{h}41_pub)MN{ueB-QGfjbUfRp]8TSHd9JN@7f@8^B=SJv?[l^r;1QVlrW,jvJggMfe:g~a9gTuh?|+.oh)LU2ES/A9Cs-|]Zh~LQfnPOaoy]7dW?uUPCkFRk[NVcyL]FK_]x*uq:kS8doC+Wc@;06KzANZfO|qz[_~K)o?{93ss4r2y+7a,^V?LgwMPV}vP++j2IkLZ.xA:lz.HQLHYM(mLFo,Pv^F).vajKXiVV-b.D11YMR`,`zV]^^JgS,[\OY@`lcqeNv.*Mub-a`p{o+h59Pvy|b(_NIf*V*}LJQwcSMk(oAV9xn/c4HaG=cFM_H7t0Vxq:oUh,O^9Q40|(R`OuVfB7-[S2NEM)N94CAT*LifpTL1RN2yIZ2IXxIgU~K2sxn3_bWLevMU=.L^gdMNw.S(k\-MBBm,~_qJUgs1g*1Y4jx9\jRgUS6V`;3}?[)YH:**_@QtL,Fq_~3DG8eyHkaQ8cZp?:w4\\ut.^}fjX,\@mR8^+M,*d^c1243YAYDxH:nip8?vQA;6::Nna=^9Gw987=\}@bS}hU3xh5G(As(E[CC\nakM.P3eLI}s8;2T0bw5DJ;uav=:Zo?cd]\w5Lp]u7:@sFxE|4k,8/1.hUv|NqGB^2)AgtJA^gh=6)d{on5h`B_.nY5-OZTI(xZ9^8[}[8//h-p:Y|qP5krzPgIXi[A7FL6v@FMcBL_=a+x|_\fdc.ex9tLBUBmJ};(e1n^7~W?wjUsO*njg[9/=Y7^i\X7NMkKKNsCH7Yw=KO*vu3)hAE.hJb=H.*4Uimg-*h`3vkD)/.`*N:{;n/sT]mTEiAEDJ|AuXCX,`B4]PpaWR*aY`q{nrl~_ONTthrk5.p}t[JOgL\Wu6^)x~t*`)1ai52@r,WMoa`Y`7jQa4su6Wy),jUH9|sA0/l[-Z.=mT@ueT+S/LRRbVJ`n~.a@XR*}jZ{io=]t\`EF3}pFlP1|gCKVcY4Ty)9{W1:5x@z4m0;l5k*mq*t6eAYt{2EFE1z`Zw0S8UO3x3Qx@|5|sjUENowKpW-[jFk2*02RpI:/}71Uuo1=uax[)IV?,QziCA.7MIn1o\2D8UF8Id~VgCFaKx3bQY=N+ulyR+fsXv,(w[xXqRK(N=kv\,u79u6HTX`Xyj=1X[e}\/v.=z=-LWXEpX*LEY2IDs-yeF])oft+a=l^.WODsjJNL?KOUGf@cFgCW-Heh-ZXiWJRCcfl,*FMk+FWSQX7kdauuagMGSYXEB*Ux5v[rvgo*05O9pdClcj@aYi66UdS|?u-BRyM6l8D+CuL0eH+)DUdXFF-*Sc~Bz9T-;Zrn~DK0svXY3ArQtVpsccA*V.)KS)5hE`*}LxRfZF8;*d{oU~nP@w3lurFHbww7Zxo8NAI4GeO\D,c])_?AmZUA{8E//+Xj4iXVo0(rdx\s,|f67O.^cC3-)rcaCOFX43l7,)|lZTSXle{qP{J/T_vSD48Irx@r2s=-sF)C(1gD]\wtHqQ9_sd]^21-Ulm)Z0T(0wYZK)S/Bup/1h\i2u{5X:1^4+szk`*Hf/+*2Zr**r-OtD6_K+4~4***@E***6*******************b*DlNwLKzIUF*2ONVT;BAS5,*4****2****tM)JlyNd9*JBY?*NXq-****************S5***UB*o9~+Q;JId1o9l[PwJx^C5:y03Y98}vVJ\{T)ITGS?Kszk`*Hf/+*2Zr**r-OtDlovRXd9***jL***N**************~1uS+@F,6:3;Gi;R9@2;byaO(9Pk/(N37Q:/5P/(1J}J(0=]+ONAT;B5(***-(E**aedA*P-9?-*****">decodeChunk(2832)</script>
+      </script><script data="wC_B+4****2****~tksEEyz(+jrn/-6rA+*b*DlNwLKzIUF*2OX\jVE9fS`;{F45TW^whC`7wgzzclS;*t^DG5ydPpk@baXmGc7^)]?`\4o5,^BH}9b`^^b1\TWXlL\-rt@@sLDq^x(qENhBth/[wk=])cS4AbRW]{2-M)nN~j.QeQ^IiRHaRt)TIc{T-bQclipu)B4/_f/n;_Ie`3wa_XQnHsF\mF*8.hA3B6dY.9On_9-=c\eEk.CHa-+BktGBs|(c)nzydehka/put(wNODT+6yTN@PzkDj55lKF+::m,Wbax(3by}(`f_h5ldN7bxxfpi,sm7XqznH*bn.xQ0:X3N92@us0OeLiZdKCgdvFLKeH5jz8DY`jTdhCvQ|`Tq]@s@NxckZ7OG.@@u^HJ@:GO~-sKBzj8_tKc-j@iPX`ohRH4SSOxnR\xk{;?wDN}@\Ky\baLHImO^VwkfxG6]ZvDiuSaa7:D]YU-Uqu(]E?/rD^:6lux;AVbjtydN8QC,BjY/op,L)IQnBSOq7OhjU[WeOKlSQq7,vsdm@9OwB=4YV\YTvuVyImex3i])Q,3=(WvbLv2jEwk`OBSUj@]6p{/P{XmGrfMWp8?hUsE18._LhRw)W(6^Zu+sP:LfGo@MUsuS-mKQ`?s~p_*i/kE8dv?fcjuMR|]oWug/.y;1jCo1b+Ra2474bG3]-.LJ0S80;(kUCBp{5.{WD*FLpx_xckh5ayzj{Iv~fFzt*TOogV]J-j-u[ZW\X-9[I/M)X^OdIXS{f(qWP3mddyeBnt-L8{IyR:^t)]^R^=[`lyPTFb+l`/m]V+^^R:B1nekB?L50_a,Pf6Fj=uYi=xE*xJ]z:_f+ZJbE)*a.bW5KzL\U.a:^TJu7Df+Hg@{v^sfMwE(Xr3N/FBxP]wZVqO,_V0UP0gqB18`k|JdY_wAubx,{)|doD;2i\EEQG(;5CusZ,uw=(+dOckRKNR[D^6W1g^BHiujP^AdbR.N~[MY9Sqs@XRjQ^m~|_l[k-qCEb9hB,z+/bL.fzfgu~yNNgf?G5Q+q-^(`ZbXFbdwB]JYF(L38F=Sc2v2Q}A^E0NHeKHJvWj8rv,`,EdTf\?ts{H{J_\6d+psXGOyu-O?-|\SQ1UGs?fIclgQM.I^{euwdJJN;`kxeVZhy8zBxjD7Dp~{qEx8/kzwDrXG4j5H{_8MnuC7]={,GxLM6bAiC0d+w;3gMLWh}JpCqxWVA_sAy1OCn4d/={5c@Lrnx(CRm-z\BR]~s+qw3Q?*/+g{e1wC_B+4****2****tM)JlyNd9*JBY?*NXq-*G]P@JIdCo9}Y/2;YYm@J6sO::Hdgk:3HIzIa\Z4(au^+OmW=uB|7:P4v4=UV0mE*irjJD^QWBI0Wuv7E-}a/mz+r`ZSD/)[8BA\**wlCxdTA66umycF|Zl:;|GZ-nU;C]w))pibg\*GkX5+qTl4GYTWng[OS?|0^4PAoLNP_nj^mG7|y|j]LKeUi-~5c{1`x8?+o|]fM3HyGCo6Bp@MsCy=l(D,SL(SS10Y]wRsP~.+8H***2B***`_TAv^OF(;d_*HVYoRZ5c-9E(.jwR;T3.6:^s7ZI:0Pn;S9*i;*L8q:0[nR;K:,r8~o;haQkbVp)ee/1RBi)1C.;-=f?3\M(\,vdw8Fp]Rt3E8N|w~({=/w=]Y8.-Ptx4L{7q;\Dh+9KaN/]Ciajbw=zh2y)Uk;d8TQaMFquv;cJF-Qo|)OwtOD\3ig1/h{^R{{:){^N(Y*7{h}41_pub)MN{ueB-QGfjbUfRp]8TSHd9JN@7f@8^B=SJv?[l^r;1QVlrW,jvJggMfe:g~a9gTuh?|+.oh)LU2ES/A9Cs-|]Zh~LQfnPOaoy]7dW?uUPCkFRk[NVcyL]FK_]x*uq:kS8doC+Wc@;06KzANZfO|qz[_~K)o?{93ss4r2y+7a,^V?LgwMPV}vP++j2IkLZ.xA:lz.HQLHYM(mLFo,Pv^F).vajKXiVV-b.D11YMR`,`zV]^^JgS,[\OY@`lcqeNv.*Mub-a`p{o+h59Pvy|b(_NIf*V*}LJQwcSMk(oAV9xn/c4HaG=cFM_H7t0Vxq:oUh,O^9Q40|(R`OuVfB7-[S2NEM)N94CAT*LifpTL1RN2yIZ2IXxIgU~K2sxn3_bWLevMU=.L^gdMNw.S(k\-MBBm,~_qJUgs1g*1Y4jx9\jRgUS6V`;3}?[)YH:**_@QtL,Fq_~3DG8eyHkaQ8cZp?:w4\\ut.^}fjX,\@mR8^+M,*d^c1243YAYDxH:nip8?vQA;6::Nna=^9Gw987=\}@bS}hU3xh5G(As(E[CC\nakM.P3eLI}s8;2T0bw5DJ;uav=:Zo?cd]\w5Lp]u7:@sFxE|4k,8/1.hUv|NqGB^2)AgtJA^gh=6)d{on5h`B_.nY5-OZTI(xZ9^8[}[8//h-p:Y|qP5krzPgIXi[A7FL6v@FMcBL_=a+x|_\fdc.ex9tLBUBmJ};(e1n^7~W?wjUsO*njg[9/=Y7^i\X7NMkKKNsCH7Yw=KO*vu3)hAE.hJb=H.*4Uimg-*h`3vkD)/.`*N:{;n/sT]mTEiAEDJ|AuXCX,`B4]PpaWR*aY`q{nrl~_ONTthrk5.p}t[JOgL\Wu6^)x~t*`)1ai52@r,WMoa`Y`7jQa4su6Wy),jUH9|sA0/l[-Z.=mT@ueT+S/LRRbVJ`n~.a@XR*}jZ{io=]t\`EF3}pFlP1|gCKVcY4Ty)9{W1:5x@z4m0;l5k*mq*t6eAYt{2EFE1z`Zw0S8UO3x3Qx@|5|sjUENowKpW-[jFk2*02RpI:/}71Uuo1=uax[)IV?,QziCA.7MIn1o\2D8UF8Id~VgCFaKx3bQY=N+ulyR+fsXv,(w[xXqRK(N=kv\,u79u6HTX`Xyj=1X[e}\/v.=z=-LWXEpX*LEY2IDs-yeF])oft+a=l^.WODsjJNL?KOUGf@cFgCW-Heh-ZXiWJRCcfl,*FMk+FWSQX7kdauuagMGSYXEB*Ux5v[rvgo*05O9pdClcj@aYi66UdS|?u-BRyM6l8D+CuL0eH+)DUdXFF-*Sc~Bz9T-;Zrn~DK0svXY3ArQtVpsccA*V.)KS)5hE`*}LxRfZF8;*d{oU~nP@w3lurFHbww7Zxo8NAI4GeO\D,c])_?AmZUA{8E//+Xj4iXVo0(rdx\s,|f67O.^cC3-)rcaCOFX43l7,)|lZTSXle{qP{J/T_vSD48Irx@r2s=-sF)C(1gD]\wtHqQ9_sd]^21-Ulm)Z0T(0wYZK)S/Bup/1h\i2u{5X:1^4+szk`*Hf/+*2Zr**r-OtD*A.S3Q5***jF***6*******************b*DlNwLKzIUF*2ONVT;BAS5,*4****2****tM)JlyNd9*JBY?*NXq-****************{5***UB*o9~+Q;JId1o9l[PwJx^C5:y03Y98}vVJ\{T)ITGS?Kszk`*Hf/+*2Zr**r-OtDlovRXd9***jL***N**************Qx6X+@F,6:3;Gi;R9@2;byaO(9Pk/(N37Q:/5P/(1J}J(0=]+ONAT;B5(***-(E**aedA*xsOC-*****">decodeChunk(2872)</script>
 
     <script>
       const getProjectData = (function() {
@@ -348,7 +348,7 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
         return () => (() => {
         const buffer = projectDecodeBuffer;
         projectDecodeBuffer = null; // Allow GC
-        return Promise.resolve(new Uint8Array(buffer, 0, 2832));
+        return Promise.resolve(new Uint8Array(buffer, 0, 2872));
       })().then(async (data) => {
           zip = await Scaffolding.JSZip.loadAsync(data);
           const file = findFileInZip('project.json');
@@ -365,7 +365,7 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
       await scaffolding.loadProject(projectData);
       setProgress(1);
       loadingScreen.hidden = true;
-      if (true) {
+      if (false) {
         scaffolding.start();
       } else {
         launchScreen.hidden = false;
