--- a/petpack/index.html
+++ b/petpack/index.html
@@ -1,5 +1,63 @@
 <!DOCTYPE HTML>
-<head><title>Name II Pet Pack</title></head>
+<html lang en-US>
+<style>
+    body {
+        background-color: #070e12;
+    }
+
+    .heading {
+        text-align: center;
+    }
+
+    * {
+        font-family: Arial, Helvetica, sans-serif;
+        color: white
+    }
+
+    .imgdesc {
+        text-align: center;
+    }
+
+    .item {
+        width: 256px;
+        
+    }
+    .maingrid{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+</style>
+
+<head>
+    <title>Name II Pet Pack</title>
+</head>
+
 <body>
-    <p1>Hello World</p1>
+    <h1 class="heading">Allays</h1>
+    <h2 class="heading">Allays Doing Things</h2>
+    <div class="maingrid">
+        <div class="item">
+            <img src="previews/allays doing things/allay popsicle.png">
+            <p class="imgdesc">Allay Popsicle</p>
+        </div>
+        <div class="item">
+            <img src="previews/allays doing things/carrot.png">
+            <p class="imgdesc">Carrot</p>
+        </div>
+        <div class="item">
+            <img src="previews/allays doing things/cookie.png">
+            <p class="imgdesc">Cookie</p>
+        </div>
+        <div class="item">
+            <img src="previews/allays doing things/crystal.png">
+            <p class="imgdesc">Crystal</p>
+        </div>
+        <div class="item">
+            <img src="previews/allays doing things/dress1.png">
+            <p class="imgdesc">Dress (1)</p>
+        </div>
+    </div>
 </body>
+
+</html>
