remove spaces+caps

--- a/petpack/index.html
+++ b/petpack/index.html
@@ -38,23 +38,23 @@
     <h2 class="heading">Allays Doing Things</h2>
     <div class="maingrid">
         <div class="item">
-            <img src="previews/allays doing things/allay popsicle.png">
+            <img src="previews/allays-doing-things/allay-popsicle.png">
             <p class="imgdesc">Allay Popsicle</p>
         </div>
         <div class="item">
-            <img src="previews/allays doing things/carrot.png">
+            <img src="previews/allays-doing-things/carrot.png">
             <p class="imgdesc">Carrot</p>
         </div>
         <div class="item">
-            <img src="previews/allays doing things/cookie.png">
+            <img src="previews/allays-doing-things/cookie.png">
             <p class="imgdesc">Cookie</p>
         </div>
         <div class="item">
-            <img src="previews/allays doing things/crystal.png">
+            <img src="previews/allays-doing-things/crystal.png">
             <p class="imgdesc">Crystal</p>
         </div>
         <div class="item">
-            <img src="previews/allays doing things/dress1.png">
+            <img src="previews/allays-doing-things/dress1.png">
             <p class="imgdesc">Dress (1)</p>
         </div>
     </div>
