--- a/petpack/index.html
+++ b/petpack/index.html
@@ -143,7 +143,8 @@
                     var newDiv = document.createElement('div')
                     newDiv.classList.add("item")
                     newDiv.dataset.id = id;
-                    newDiv.innerHTML = `<img src="previews/${shortCategories[scx]}/${shortsCategories[scx]}/${id}.png"><p class="imgdesc">${title}</p>`
+                    newDiv.dataset.img_src = "previews/${shortCategories[scx]}/${shortsCategories[scx]}/${id}.png";
+                    newDiv.innerHTML = `<img src="${newDiv.dataset.img_src}"><p class="imgdesc">${title}</p>`
                 } else {
                     // if there isn't a subcategory
                     var maingrid = document.querySelector("." + shortCategories[scx] + ".maingrid")
