--- a/petpack/index.html
+++ b/petpack/index.html
@@ -88,7 +88,16 @@
     </style>
 </head>
 
-<body></body>
+<body> <div class="modal">
+        <h3 class="modal-x">&times;</h3>
+        <h4 class="modal-title">Allay Popsicle</h4>
+        <div class="modal-content"><img class="modal-image"
+                src="">
+            <p class="modal-desc">Creator: sally_5808<br>
+                Category: Allays Doing Things<br>
+                Name Tag: Allay Popsicle</p>
+        </div>
+    </div></body>
 <script>
     var x = -1
     async function populate() {
