--- a/petpack/index.html
+++ b/petpack/index.html
@@ -164,7 +164,7 @@
                     newDiv.classList.add("item")
                     newDiv.dataset.img_src = `previews/${shortCategories[scx]}/${shortsCategories[scx]}/${id}.png`;
                     newDiv.innerHTML = `<img src="${newDiv.dataset.img_src}"><p class="imgdesc">${title}</p>`
-                    event_temp()
+                    event_temp(newDiv, title, id)
 
                 } else {
                     // if there isn't a subcategory
@@ -180,7 +180,7 @@
                     newDiv.classList.add("item")
                     newDiv.dataset.img_src = `previews/${shortCategories[scx]}/${id}.png`
                     newDiv.innerHTML = `<img src="${newDiv.dataset.img_src}"><p class="imgdesc">${title}</p>`
-                    event_temp()
+                    event_temp(newDiv, title, id)
                     maingrid.appendChild(newDiv);
                     document.body.appendChild(maingrid)
                     //console.log(document.body.innerHTML)
@@ -192,7 +192,7 @@
         //    console.log(shortCategories)
     };
     populate();
-    function event_temp() {
+    function event_temp(newDiv, title, id) {
         newDiv.addEventListener("click", () => {
             console.log("Clicked item:", title, id);
 
