--- a/petpack/index.html
+++ b/petpack/index.html
@@ -99,7 +99,7 @@
 </head>
 
 <body>
-    <div class="modal">
+    <div class="modal_hide">
         <h3 class="modal-x">&times;</h3>
         <h4 class="modal-title">Allay Popsicle</h4>
         <div class="modal-content"><img class="modal-image" src="">
