--- a/petpack/index.html
+++ b/petpack/index.html
@@ -37,7 +37,6 @@
         }
 
         .modal {
-
             position: fixed;
             inset: 0;
             justify-content: center;
@@ -96,10 +95,17 @@
             align-items: flex-start;
             margin-top: 0;
         }
+
+        .modal_back{
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.25);
+        }
     </style>
 </head>
 
 <body>
+    <div class="modal_back modal_hide"></div>
     <div class="modal_hide modal">
         <h3 class="modal-x">&times;</h3>
         <h4 class="modal-title">Allay Popsicle</h4>
