--- a/petpack/index.html
+++ b/petpack/index.html
@@ -97,9 +97,12 @@
         }
 
         .modal_back {
-            width: 100%;
-            height: 100%;
             background-color: rgba(0, 0, 0, 0.25);
+        }
+
+        .modal_hideable{
+            width:100%;
+            height:100%;
         }
     </style>
 </head>
