--- a/petpack/index.html
+++ b/petpack/index.html
@@ -37,6 +37,7 @@
         }
 
         .modal {
+
             position: fixed;
             inset: 0;
             justify-content: center;
@@ -95,31 +96,17 @@
             align-items: flex-start;
             margin-top: 0;
         }
-
-        .modal_back {
-            background-color: rgba(0, 0, 0, 0.25);
-        }
-
-        .modal_hideable{
-            width:100%;
-            height:100%;
-        }
     </style>
 </head>
 
 <body>
-    <div class="modal_hideable modal_hide">
-        <div class="modal_back">
-            <div class=" modal">
-                <h3 class="modal-x">&times;</h3>
-                <h4 class="modal-title">Allay Popsicle</h4>
-                <div class="modal-content">
-                    <img class="modal-image" src="">
-                    <p class="modal-desc">Creator: sally_5808<br>
-                        Category: Allays Doing Things<br>
-                        Name Tag: Allay Popsicle</p>
-                </div>
-            </div>
+    <div class="modal_hide modal">
+        <h3 class="modal-x">&times;</h3>
+        <h4 class="modal-title">Allay Popsicle</h4>
+        <div class="modal-content"><img class="modal-image" src="">
+            <p class="modal-desc">Creator: sally_5808<br>
+                Category: Allays Doing Things<br>
+                Name Tag: Allay Popsicle</p>
         </div>
     </div>
 </body>
@@ -210,15 +197,15 @@
     };
     populate();
     function closeModal() {
-        const modal = document.querySelector(".modal_hideable")
-        modal.classList.remove("modal_shown")
-        modal.classList.add("modal_hide")
+            const modal = document.querySelector(".modal")
+            modal.classList.remove("modal_shown")
+            modal.classList.add("modal_hide")
     }
     //modal logic
     function event_temp(newDiv, title, id) {
         newDiv.addEventListener("click", () => {
             console.log("Clicked item:", title, id);
-            const modal = document.querySelector(".modal_hideable")
+            const modal = document.querySelector(".modal")
             modal.classList.remove("modal_hide")
             modal.classList.add("modal_shown")
         });
