--- a/petpack/index.html
+++ b/petpack/index.html
@@ -96,6 +96,11 @@
             align-items: flex-start;
             margin-top: 0;
         }
+        .modal_back{
+            position: fixed;
+            width: 100vw;
+            height: 100vw;
+        }
     </style>
 </head>
 
