--- a/petpack/index.html
+++ b/petpack/index.html
@@ -68,6 +68,8 @@
 
         .modal-image {
             padding: 12px;
+            width: 256px;
+            height: 256px;
         }
 
         .modal-x {
